package maidsafe.nfs.protobuf;
import "maidsafe/nfs/data_message.proto";
option optimize_for = LITE_RUNTIME;

// MAID Client send to MAID Account Holder
message PmidRegistration {
  message SignedDetails {
    message Details {
      required bytes maid_name = 1;
      required bytes pmid_name = 2;
      required bool unregister = 3;
    }
    required bytes serialised_details = 1;
    required bytes pmid_signature = 2;
  }
  required bytes serialised_signed_details = 1;
  required bytes maid_signature = 2;
}

// MPID Client to MPID Client (or MPID Account Holders)
message ConnectMessage {
  required int32 message_id = 1; // random int32
  optional int32 parent_id = 2;
}

// Trailing underscore to avoid name conflict with MSVC's #define PostMessage in WinUser.h
message GenericMessage {
  required int32 post_action_type = 1;
  required int32 destination_persona_type = 2;
  required DataMessage.Source source = 3;
  required bytes name = 4;
  required bytes content = 5;
  optional bytes signature = 6;
  required int32 message_id = 7;
}
