package maidsafe.nfs.protobuf;

message MessageWrapper {
  required bytes serialised_message = 1;
  optional bytes signature = 2;
}
